fixed gap
add gap to .poster to add 30px space between

--- a/css/styles.css
+++ b/css/styles.css
@@ -326,6 +326,7 @@ body {
 
 .posters {
   flex-wrap: wrap;
+  gap: 30px;
   padding-bottom: 94px;
 }
 
